--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:background="@drawable/gradient"
     tools:context="com.example.sumitkumar1.weatherapp.detail.DetailActivity">
@@ -13,6 +14,7 @@
         android:layout_alignParentTop="true"
         android:id="@+id/tv_location"
         android:layout_marginBottom="-16dp"
+        android:layout_marginTop="16dp"
         tools:text="Bangalore"
         style="@style/LocationName"/>
 
@@ -148,10 +150,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/BaseTheme"
-                android:text="32"
                 android:id="@+id/tv_degree"/>
         </LinearLayout>
 
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="32dp"
+        app:backgroundTint="#ffeb3b"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:srcCompat="@drawable/ic_mode_edit_black_24px" />
 
 </RelativeLayout>
