--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:fontFamily">sans-serif-normal</item>
     </style>
 
-    <style name="LocationName" parent="BaseTheme" >
+    <style name="LocationName" parent="BaseTheme">
         <item name="android:textSize">28sp</item>
         <item name="android:fontFamily">sans-serif-normal</item>
     </style>
@@ -35,5 +35,9 @@
         <item name="android:textStyle">normal</item>
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
