--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -18,8 +18,10 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/im_fab"
         android:src="@drawable/ic_favorite_border_black_24px"
+        android:layout_marginRight="16dp"
         android:layout_gravity=""/>
 
 </LinearLayout>
